CHANGES.txt - 2009-07-07
------------------------

CHANGES IN CUPS V1.4.0

	- Localization updates (STR #3223, STR #3246, STR #3248, STR #3250)
	- Documentation updates (STR #3225, STR #3230, STR #3242)
	- The scheduler did not protect against bad job control files in all
	  cases (STR #3253)
	- The scheduler did not encode "+" in model names (STR #3254)
	- The web interface didn't show the default options (STR #3244)
	- The IPP and LPD backends needed print data before they would do an
	  SNMP query.
	- Fixed a GNU TLS compatibility issue (STR #3231)
	- Fixed a HTML error in the add and modify printer web interface
	  templates (STR #3229)
	- The scheduler did not minimize the number of printer state events that
	  were generated by filter STATE: messages, which could lead to poor
	  performance.
	- The USB backend on Mac OS X did not cleanly cancel a job.
	- The network backends now set the connecting-to-device printer-state-
	  reasons value when looking up the address and copying the print data
	  for consistency.
	- The scheduler now supports the com.apple.print.recoverable-warning
	  reason on all platforms.


CHANGES IN CUPS V1.4rc1

	- The PPD compiler documentation was missing information on localization
	  (STR #3212)
	- The IPP backend now reconnects after every request when talking to
	  printers that claim IPP support but only use HTTP/1.0.
	- The PPD compiler crashed when both "Resolution" and "Group foo Option
	  Resolution" were specified in the .drv file.
	- The PPD compiler's #if/#elif/#else/#endif did not work for undefined
	  variables (STR #3210)
	- Static libraries could not be installed by a non-root user on systems
	  needing a ranlib program (STR #3209)
	- The scheduler incorrectly always tried to copy Kerberos credentials
	  for print jobs.
	- Updated the Spanish localization (STR #3204)
	- The scheduler crashed when getting the default paper size from
	  libpaper (STR #3205, STR #3206)